--- a/src/main/resources/templates/allUsersPage.html
+++ b/src/main/resources/templates/allUsersPage.html
@@ -36,7 +36,7 @@
         font-size: 21px;
         max-width: 100%;
         display: block;
-        margin: auto;
+        margin: 50px auto;
         border: none;
     }
 
